Fix header spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -414,6 +414,9 @@ img.floatRight {
 img.rounded {
     border-radius: 20px;
 }
+h1.brand-heading {
+    margin-bottom: 0px;
+}
 p.intro-text {
     font-size: 60px;
     color: #FFF;
